--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "test:watch": "vitest",
     "test:e2e": "playwright test"
   },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write .",
+      "eslint ."
+    ]
+  },
   "dependencies": {
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
@@ -37,7 +43,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-vitest": "^0.0.48",
+    "husky": "^8.0.3",
     "jsdom": "^21.1.0",
+    "lint-staged": "^13.1.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
